--- a/src/utiles/factory.properties
+++ b/src/utiles/factory.properties
@@ -2,3 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
+FACADE=Facade.MainFacade
+ALUMNO=DAOs.AlumnoDAO
+PROFESOR=DAOs.ProfesorDAO
+AULAS=DAOs.AulasDAO
+ASIGNATURA=DAOs.AsignaturaDAO
